logs/pysoup.log
Listing '.'...
Listing './bin'...
Compiling './bin/soup.py'...
***   File "./bin/soup.py", line 60
    print 'at least one argument is required.\nsee: soup {0} -h'.format(args.command)
                                                               ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/Twisted-15.5.0.egg-info'...
Listing './lib/python3.5/site-packages/argcomplete'...
Listing './lib/python3.5/site-packages/argcomplete/bash_completion.d'...
Listing './lib/python3.5/site-packages/argcomplete-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/blessings'...
Listing './lib/python3.5/site-packages/blessings-1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysoup'...
Listing './lib/python3.5/site-packages/pysoup/display'...
Compiling './lib/python3.5/site-packages/pysoup/display/interactive_display.py'...
***   File "./lib/python3.5/site-packages/pysoup/display/interactive_display.py", line 25
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pysoup/logger'...
Listing './lib/python3.5/site-packages/pysoup/parser'...
Listing './lib/python3.5/site-packages/pysoup/pip'...
Listing './lib/python3.5/site-packages/pysoup/utils'...
Listing './lib/python3.5/site-packages/pysoup/venv'...
Listing './lib/python3.5/site-packages/pysoup-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/requirements'...
Listing './lib/python3.5/site-packages/requirements_parser-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/_threads'...
Listing './lib/python3.5/site-packages/twisted/_threads/test'...
Listing './lib/python3.5/site-packages/twisted/application'...
Listing './lib/python3.5/site-packages/twisted/application/test'...
Listing './lib/python3.5/site-packages/twisted/cred'...
Listing './lib/python3.5/site-packages/twisted/cred/test'...
Listing './lib/python3.5/site-packages/twisted/internet'...
Listing './lib/python3.5/site-packages/twisted/internet/test'...
Listing './lib/python3.5/site-packages/twisted/logger'...
Listing './lib/python3.5/site-packages/twisted/logger/test'...
Listing './lib/python3.5/site-packages/twisted/names'...
Listing './lib/python3.5/site-packages/twisted/names/test'...
Listing './lib/python3.5/site-packages/twisted/persisted'...
Listing './lib/python3.5/site-packages/twisted/persisted/test'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './lib/python3.5/site-packages/twisted/positioning'...
Listing './lib/python3.5/site-packages/twisted/positioning/test'...
Listing './lib/python3.5/site-packages/twisted/protocols'...
Listing './lib/python3.5/site-packages/twisted/protocols/test'...
Listing './lib/python3.5/site-packages/twisted/python'...
Listing './lib/python3.5/site-packages/twisted/python/test'...
Listing './lib/python3.5/site-packages/twisted/scripts'...
Listing './lib/python3.5/site-packages/twisted/test'...
Listing './lib/python3.5/site-packages/twisted/trial'...
Listing './lib/python3.5/site-packages/twisted/trial/test'...
Listing './lib/python3.5/site-packages/twisted/web'...
Listing './lib/python3.5/site-packages/twisted/web/_auth'...
Listing './lib/python3.5/site-packages/twisted/web/test'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './twisted'...
Listing './twisted/conch'...
Listing './twisted/conch/topfiles'...
Listing './twisted/internet'...
Listing './twisted/internet/iocpreactor'...
Listing './twisted/internet/iocpreactor/iocpsupport'...
Listing './twisted/internet/test'...
Listing './twisted/internet/test/fake_CAs'...
Compiling './twisted/internet/test/process_cli.py'...
Compiling './twisted/internet/test/process_helper.py'...
Listing './twisted/mail'...
Listing './twisted/mail/test'...
Listing './twisted/mail/topfiles'...
Listing './twisted/manhole'...
Listing './twisted/manhole/ui'...
Listing './twisted/names'...
Listing './twisted/names/topfiles'...
Listing './twisted/news'...
Listing './twisted/news/topfiles'...
Listing './twisted/pair'...
Listing './twisted/pair/topfiles'...
Listing './twisted/positioning'...
Listing './twisted/positioning/test'...
Compiling './twisted/positioning/test/receiver.py'...
Listing './twisted/python'...
Listing './twisted/python/test'...
Compiling './twisted/python/test/pullpipe.py'...
Listing './twisted/runner'...
Listing './twisted/runner/topfiles'...
Listing './twisted/spread'...
Listing './twisted/spread/ui'...
Listing './twisted/test'...
Compiling './twisted/test/_preamble.py'...
Compiling './twisted/test/plugin_basic.py'...
Compiling './twisted/test/plugin_extra1.py'...
Compiling './twisted/test/plugin_extra2.py'...
Compiling './twisted/test/process_cmdline.py'...
Compiling './twisted/test/process_echoer.py'...
Compiling './twisted/test/process_fds.py'...
Compiling './twisted/test/process_linger.py'...
Compiling './twisted/test/process_reader.py'...
Compiling './twisted/test/process_signal.py'...
Compiling './twisted/test/process_stdinreader.py'...
Compiling './twisted/test/process_tester.py'...
Compiling './twisted/test/process_tty.py'...
Compiling './twisted/test/process_twisted.py'...
Compiling './twisted/test/stdio_test_consumer.py'...
Compiling './twisted/test/stdio_test_halfclose.py'...
Compiling './twisted/test/stdio_test_hostpeer.py'...
Compiling './twisted/test/stdio_test_lastwrite.py'...
Compiling './twisted/test/stdio_test_loseconn.py'...
Compiling './twisted/test/stdio_test_producer.py'...
Compiling './twisted/test/stdio_test_write.py'...
Compiling './twisted/test/stdio_test_writeseq.py'...
Listing './twisted/topfiles'...
Listing './twisted/trial'...
Listing './twisted/trial/test'...
Compiling './twisted/trial/test/mockdoctest.py'...
Compiling './twisted/trial/test/moduleself.py'...
Compiling './twisted/trial/test/moduletest.py'...
Compiling './twisted/trial/test/novars.py'...
Compiling './twisted/trial/test/ordertests.py'...
Compiling './twisted/trial/test/packages.py'...
Compiling './twisted/trial/test/sample.py'...
Compiling './twisted/trial/test/scripttest.py'...
Listing './twisted/web'...
Listing './twisted/web/topfiles'...
Listing './twisted/words'...
Listing './twisted/words/im'...
Listing './twisted/words/topfiles'...
Listing './twisted/words/xish'...
